--- a/a1.html
+++ b/a1.html
@@ -90,7 +90,7 @@
 
     <div id="header">
       <h1 id="header_title">
-        <span id="title1"><a href="index_21761003.html">Frame</a></span><span id="title2">_</span>
+        <span id="title1"><a href="index">Frame</a></span><span id="title2">_</span>
       </h1>
       <ul id="navi_list">
         <li><a href="page1.html">Experience</a></li>
